scheduler: Collect a task's thread_time into correct UKM field

thread_time was previously overriding the wall time, but should actually
be reported in a separate UKM field.

Bug: 842112
Change-Id: If772b5276c0629a4184006bb5382939d9281d3d7
Reviewed-on: https://chromium-review.googlesource.com/1054011
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557860}
Former-commit-id: 2794e1b22391a55780ef2c6d1734ef970fc7acc8